--- a/game.html
+++ b/game.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="game.css" />
+        <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.2.min.js"></script>
         <script src="game.js"></script>
     </head>
     <body>
-        <canvas id="canvas">
+        <canvas id="canvas" width="400" height="400">
         </canvas>
     </body>
 </html>
